RESOLVED FIXED276352
Crash in WebKit::RemoteLayerBackingStore::needsDisplay due to owner() being null
https://bugs.webkit.org/show_bug.cgi?id=276352
Summary Crash in WebKit::RemoteLayerBackingStore::needsDisplay due to owner() being null
Matt Woodrow
Reported 2024-07-08 21:53:46 PDT
Attachments
Matt Woodrow
Comment 1 2024-07-08 21:58:26 PDT
EWS
Comment 2 2024-07-11 14:03:21 PDT
Committed 280874@main (69f43e224016): <https://commits.webkit.org/280874@main> Reviewed commits have been landed. Closing PR #30594 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.