Crash in WebKit::RemoteLayerBackingStore::needsDisplay due to owner() being null. https://bugs.webkit.org/show_bug.cgi?id=276352 <rdar://131107394>

Reviewed by Dan Glastonbury.

When a layer subtree has rendering suppression, we just want add its backing store
to m_reachableBackingStoreInLatestFlush to stop it from being purged.

It is entirely possible for the owner() (the GraphicsLayer) to have gone away, and
we want to continue to display the old content until suppression ends.

The existing code for RemoteLayerBackingStoreCollection::backingStoreWillBeDisplayed
checked for invalidation via needsDisplay(), which then crashed if the owner had gone
away.

This adds a new alternative that doesn't check for invalidation, with very explicit
rendering suppression naming.

* Source/WebKit/Shared/RemoteLayerTree/RemoteLayerBackingStore.h:
* Source/WebKit/Shared/RemoteLayerTree/RemoteLayerBackingStore.mm:
(WebKit::RemoteLayerBackingStore::layerWillBeDisplayedWithRenderingSuppression):
(WebKit::RemoteLayerBackingStore::needsDisplay const):
* Source/WebKit/Shared/RemoteLayerTree/RemoteLayerBackingStoreCollection.h:
* Source/WebKit/Shared/RemoteLayerTree/RemoteLayerBackingStoreCollection.mm:
(WebKit::RemoteLayerBackingStoreCollection::backingStoreWillBeDisplayedWithRenderingSuppression):
* Source/WebKit/WebProcess/WebPage/RemoteLayerTree/PlatformCALayerRemote.h:
* Source/WebKit/WebProcess/WebPage/RemoteLayerTree/PlatformCALayerRemote.mm:
(WebKit::PlatformCALayerRemote::recursiveMarkWillBeDisplayedWithRenderingSuppresion):
(WebKit::PlatformCALayerRemote::recursiveBuildTransaction):
(WebKit::PlatformCALayerRemote::recursiveMarkWillBeDisplayed): Deleted.

Canonical link: https://commits.webkit.org/280874@main